# hello-cardano-template

./: .gitignore  .hlint.yaml  LICENSE  README.md  cabal-haskell.nix.project  cabal.project  dUSD.cabal  flake.nix  nix-test.sh  test-plan.tex  tmp-build  treefmt.toml
.github/: CODEOWNERS  pull_request_template.md
architecture/: README.md
coinbase-servant-api/test-resources/: spot-price-error-result.json  spot-price-result.json
docs/: default.nix  dusd-spec.tex  flake-module.nix  hello-discovery.md  hello-world.tex  pr-review-policy.md  test-plan.tex  whitepaper.tex
docs/reasoning/: auctions-buffer.md  hello-discovery.md  params-buffer.md
nix/: everything-else.nix  flake-local.nix  format.nix  haskell.nix  plutus.nix
nix/flake-modules/: default.nix
nix/lib/: default.nix  fixHaskellDotNix.nix  haskell.nix  mkRunCmdInShellApp.nix  mkScript.nix
nixos/tests/: hello-world-browser-lighthouse.nix
offchain/: README.md  cabal-haskell.nix.project  cabal.project  dUSD-offchain.cabal  default.nix  flake-module.nix  ps-pkgs-ctl.nix  sha256map.nix  webpack.config.js
offchain-ctl/: README.md  ctl-deps  default.nix  flake-module.nix  index.js  package-lock.json  package.json  packages.dhall  ps-pkgs-ctl.nix  spago-packages.nix  webpack.config.js
offchain-ctl/hello-world-api/: spago.dhall
offchain-ctl/hello-world-browser/: index.html  index.js
offchain-ctl/hello-world-cli/: Main.purs  cliDemo  cliErrors  cliTest  cliTest.sh  runCli
offchain/hello-world/: README.md  hello-world.cabal
offchain/hello-world-api/: flake-module.nix
offchain/hello-world-browser/: .postcssrc.json  KeyWallet.js  NamiWallet.js  flake-module.nix  index.html  index.js  main.css  package-lock.json  package.json  test.js
offchain/hello-world-browser-e2e/: .gitignore  package-lock.json
offchain/hello-world-browser/test/integration/: Main.hs  flake-module.nix  hello-world-browser-test.cabal  sha256map
offchain/hello-world-cli/: cliDemo.sh  cliTest.sh  flake-module.nix  script.clistate  staking.skey
offchain/hello-world-ui/test/selenium/: README  README.md  SydTestWebDriver.hs  flake-module.nix  hello-world-ui-selenium-test.cabal
offchain/hello-world/app/: Main.hs
offchain/hello-world/selenium-example/: MyLibTest.hs  README  SydTestWebDriver.hs  WebDriver.hs  cabal.project  flake-module.nix  flake.nix  selenium-example.cabal  try-selenium.cabal
offchain/hello-world/selenium-example/app/: .Main.hs.swp
offchain/hello-world/selenium-example/html/: HelloWorld.html
offchain/hello-world/src/HelloWorld/: Contract.hs  LocalCluster.hs  PAB.hs  ValidatorProxy.hs  ValidatorUtils.hs
offchain/hello-world/test-client/: activate.json
offchain/hello-world/test/e2e/: Main.hs
offchain/hello-world/test/unit/: Main.hs
offchain/hello-world/test/unit/HelloWorld/: ContractSpec.hs
onchain/: README.md  cabal-haskell.nix.project  cabal.project  dUSD-onchain.cabal  default.nix  flake-module.nix  onchain.cabal  sha256map
onchain/apropos-tx/Apropos/: ContextBuilder.hs  Script.hs
onchain/goldens/: hello
onchain/goldens/cbor/: hello  param-hello  trivial
onchain/hello-ctl/: HelloWorld.hs
onchain/hello-world/: HelloWorld.hs
onchain/scripts/: Main.hs
onchain/src/: DUSD.hs  Hello.hs  HelloDiscovery.hs  Onchain.hs  Utils.hs
onchain/src/Plutarch/Extensions/: Api.hs  Data.hs  List.hs  Monad.hs
onchain/tests/: Gen.hs  Main.hs  Tests.hs
onchain/tests/Apropos/Plutus/: AssetClass.hs  Auction.hs  Hello.hs  HelloValidator.hs  Integer.hs  SimpleNFT.hs  SingletonValue.hs  Value.hs  Vault.hs
onchain/tests/Goldens/: Cbor.hs
price-feeder/: README.md  cabal.project  flake-module.nix  test.nix
price-feeder/ada-price-feeder/: ada-price-feeder.cabal
price-feeder/ada-price-feeder/app/: Main.hs
price-feeder/ada-price-feeder/src/: Clients.hs  MyLib.hs  PriceFetcher.hs  Types.hs
price-feeder/ada-price-feeder/test/: ClientsSpec.hs  Main.hs
price-feeder/ada-price-fetcher/: CHANGELOG.md  ada-price-fetcher.cabal
price-feeder/ada-price-fetcher/app/: Main.hs
price-feeder/ada-price-fetcher/src/: Clients.hs  PriceFetcher.hs  Types.hs
price-feeder/ada-price-fetcher/test/: Main.hs
price-feeder/binance-mock-servant-server/: binance-mock-servant-server.cabal
price-feeder/binance-mock-servant-server/app/: Main.hs
price-feeder/binance-mock-servant-server/src/Network/Binance/Server/: Mock.hs
price-feeder/coinbase-servant-client/: CHANGELOG.md  coinbase-servant-client.cabal
price-feeder/coinbase-servant-client/src/Network/Coinbase/: Client.hs
price-feeder/coinbase-servant-client/test/: Main.hs
price-feeder/coinbase-servant-client/test/Network/Coinbase/: ClientSpec.hs
price-feeder/kraken-mock-servant-server/: CHANGELOG.md  kraken-mock-servant-server.cabal
price-feeder/kraken-mock-servant-server/app/: Main.hs
price-feeder/kraken-mock-servant-server/src/Network/Kraken/Server/: Mock.hs
price-feeder/kraken-servant-api/: CHANGELOG.md  kraken-servant-api.cabal
price-feeder/kraken-servant-api/src/Network/Kraken/: API.hs
price-feeder/kraken-servant-api/test/: Main.hs
price-feeder/kraken-servant-api/test-resources/: asset-ticker-info.json  kraken-response-trivial.json  tick-data.json
price-feeder/kraken-servant-api/test/Network/Kraken/: APISpec.hs
price-feeder/kraken-servant-client/: CHANGELOG.md  kraken-servant-client.cabal
price-feeder/kraken-servant-client/src/Network/Kraken/: Client.hs  Types.hs
price-feeder/kraken-servant-client/test/: Main.hs
price-feeder/kraken-servant-client/test/Network/Kraken/: ClientSpec.hs
price-feeder/kucoin-servant-api/: .kucoin-servant-api.cabal.swp  kucoin-servant-api.cabal
price-feeder/kucoin-servant-api/src/Network/Kucoin/: API.hs
price-feeder/kucoin-servant-api/test/: Main.hs
price-feeder/kucoin-servant-api/test-resources/: fiat-price-response.json
price-feeder/kucoin-servant-api/test/Network/Kucoin/: APISpec.hs
price-feeder/pricedata-types/: CHANGELOG.md  pricedata-types.cabal
price-feeder/pricedata-types/src/PriceData/: Types.hs
src/: ApiUtils.hs  DUSD.hs  Hello.hs  MonadUtils.hs
tests/: Gen.hs  Main.hs
(+241 files in other folders)
