cabal-version:      3.0
name:               dUSD-onchain
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wno-partial-type-signatures -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    DUSD
    Hello
    Plutarch.Extensions.Api
    Plutarch.Extensions.List
    Plutarch.Extensions.Monad

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , serialise

executable scripts
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: scripts
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , dUSD-onchain
    , serialise

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: tests
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Apropos.Plutus.AssetClass
    Apropos.Plutus.Auction
    Apropos.Plutus.Hello
    Apropos.Plutus.Integer
    Apropos.Plutus.SingletonValue
    Apropos.Plutus.Value
    Apropos.Plutus.Vault
    Gen
    Tests

  build-depends:
    , apropos
    , apropos-tx
    , base
    , containers
    , dUSD-onchain
    , hedgehog
    , lens
    , plutarch
    , plutus-ledger-api
    , plutus-tx
    , sydtest
    , sydtest-hedgehog
    , tasty
    , tasty-hedgehog
    , with-utf8
