cabal-version:      3.0
name:               onchain
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wno-partial-type-signatures -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Hello
    HelloDiscovery
    Onchain
    Plutarch.Extensions.Api
    Plutarch.Extensions.Data
    Plutarch.Extensions.List
    Plutarch.Extensions.Monad
    Utils

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , data-default
    , generics-sop
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , pretty
    , serialise

library apropos-tx
  import:          lang
  exposed-modules:
    Apropos.ContextBuilder
    Apropos.Script

  hs-source-dirs:  apropos-tx
  build-depends:
    , apropos
    , base
    , containers
    , free
    , hedgehog
    , lens
    , minisat-solver
    , mtl
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , pretty
    , pretty-show
    , safe
    , template-haskell
    , text
    , transformers

executable hello-world
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        HelloWorld.hs
  hs-source-dirs: hello-world
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , directory
    , onchain
    , plutus-ledger-api
    , serialise

executable scripts
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: scripts
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , onchain
    , plutus-ledger-api
    , serialise

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: tests
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Apropos.Plutus.HelloValidator
    Apropos.Plutus.SimpleNFT
    Gen
    Goldens.Cbor
    Tests

  build-depends:
    , apropos
    , apropos-tx
    , base
    , bytestring
    , containers
    , cryptonite
    , hedgehog
    , lens
    , memory
    , onchain
    , plutarch
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , sydtest
    , sydtest-hedgehog
    , tasty
    , tasty-hedgehog
    , text
    , transformers
    , with-utf8
