cabal-version: 3.0
name:          hello-world
version:       1.0

common lang
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          lang
  exposed-modules:
    HelloWorld.Contract
    HelloWorld.LocalCluster
    HelloWorld.PAB
    HelloWorld.ValidatorProxy
    HelloWorld.ValidatorUtils

  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules
    -Wmissing-export-lists -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

  hs-source-dirs:  src
  build-depends:
    , aeson                            ^>=1.5.6.0
    , async                            ^>=2.2.4
    , base                             >=4.7       && <5
    , bytestring
    , cardano-addresses                ^>=3.8.0
    , cardano-api                      ^>=1.34.1
    , cardano-wallet                   ^>=2022.1.18
    , cardano-wallet-cli               ^>=2022.1.18
    , cardano-wallet-core              ^>=2022.1.18
    , cardano-wallet-core-integration  ^>=2022.1.8
    , cardano-wallet-launcher          ^>=2022.1.18
    , containers
    , contra-tracer                    ^>=0.1.0.0
    , data-default                     ^>=0.7.1.1
    , directory                        ^>=1.3.6.0
    , file-embed
    , filepath                         ^>=1.4.2.1
    , http-client                      ^>=0.7.11
    , iohk-monitoring                  ^>=0.2.0.0
    , lens                             ^>=4.19.2
    , lobemo-backend-ekg               ^>=0.1.0.1
    , openapi3                         >=3.1       && <3.3
    , plutus-chain-index               ^>=0.1.0.0
    , plutus-chain-index-core          ^>=0.1.0.0
    , plutus-contract                  ^>=0.1.0.0
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab                       ^>=0.1.0.0
    , plutus-tx
    , plutus-use-cases
    , prettyprinter                    ^>=1.7.1
    , serialise
    , servant-client                   ^>=0.18.3
    , text                             ^>=1.2.4.1
    , text-class                       ^>=2022.1.18
    , th-env

executable hello-world-cluster
  import:           lang
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -threaded -Wall -Wcompat -Werror -Widentities
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-home-modules -Wmissing-export-lists -Wpartial-fields
    -Wredundant-constraints -Wunused-packages

  build-depends:
    , base
    , hello-world

executable hello-world-e2e
  import:           lang
  main-is:          Main.hs
  build-depends:
    , aeson
    , async
    , base
    , cardano-wallet-core
    , hello-world
    , http-client
    , plutus-contract
    , plutus-pab
    , servant-client
    , sydtest              ^>=0.8.0.0

  hs-source-dirs:   test/e2e
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules
    -Wmissing-export-lists -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -rtsopts -with-rtsopts=-N -Werror -O2 -threaded

  default-language: Haskell2010

test-suite hello-world-test
  import:         lang
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-home-modules
    -Wmissing-export-lists -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -rtsopts -with-rtsopts=-N -Werror -O2 -threaded

  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Main.hs
  other-modules:  HelloWorld.ContractSpec
  build-depends:
    , base
    , hello-world
    , plutus-contract
    , plutus-ledger-api
    , tasty

-- , sydtest
