cabal-version:      2.4
name:               kraken-mock-servant-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marijan Petričević
maintainer:         marijan.petricevic94@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Network.Kraken.Server.Mock

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:      -Wall -Werror
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , kraken-servant-api
    , mock-servant-server-utils
    , servant-server
    , text
    , time
    , wai

  hs-source-dirs:   src
  default-language: Haskell2010

executable kraken-mock-servant-server
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:      -Wall -Werror
  build-depends:
    , base
    , kraken-mock-servant-server
    , mock-servant-server-utils
    , optparse-applicative
    , warp
    , warp-tls

  hs-source-dirs:   app
  default-language: Haskell2010
