cabal-version:      2.4
name:               pricedata-types
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marijan Petričević
maintainer:         marijan.petricevic94@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        PriceData.Types

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base
      , text
    hs-source-dirs:   src
    ghc-options:      -Wall -Werror
    default-language: Haskell2010

test-suite pricedata-types-test
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
