cabal-version: 2.4
name:          selenium-example
version:       0.1.0.0
data-dir:      html
data-files:    HelloWorld.html

executable sydtest-webdriver
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          SydTestWebDriver.hs
  other-modules:    Paths_selenium_example
  autogen-modules:  Paths_selenium_example
  build-depends:
    , base               ^>=4.14
    , directory
    , network-uri
    , QuickCheck
    , sydtest
    , sydtest-webdriver
    , text
    , webdriver
