cabal-version: 2.4
name:          selenium-example
version:       0.1.0.0

executable sydtest-webdriver
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          SydTestWebDriver.hs
  build-depends:
    , base               ^>=4.14
    , network-uri
    , QuickCheck
    , sydtest
    , sydtest-webdriver
    , text
    , webdriver
