cabal-version: 2.4
name:          hello-world-browser-test
version:       0.1.0.0

common hello-world-browser-test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                 ^>=4.14
    , genvalidity-sydtest
    , http-client
    , network-uri
    , path
    , path-io
    , QuickCheck
    , sydtest
    , sydtest-wai
    , sydtest-webdriver
    , text
    , unliftio-path
    , wai-app-static
    , webdriver

-- Cabal bug requires us to specify empty library for haskell.nix
-- https://github.com/haskell/cabal/issues/6750
-- https://github.com/input-output-hk/haskell.nix/blob/ebdc0030e6973629c1ed7dba53c1b1d154c3e75e/builder/comp-builder.nix#L264
library
  import: hello-world-browser-test

test-suite integration
  import:  hello-world-browser-test
  type:    exitcode-stdio-1.0
  main-is: Main.hs
