cabal-version: 2.4
name:          hello-world-ui-selenium-test
version:       0.1.0.0

-- Cabal bug requires us to specify empty library for haskell.nix
-- https://github.com/haskell/cabal/issues/6750
-- https://github.com/input-output-hk/haskell.nix/blob/ebdc0030e6973629c1ed7dba53c1b1d154c3e75e/builder/comp-builder.nix#L264
library

test-suite sydtest-webdriver
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  type:               exitcode-stdio-1.0
  main-is:            SydTestWebDriver.hs
  build-depends:
    , base               ^>=4.14
    , network-uri
    , port-utils
    , QuickCheck
    , sydtest
    , sydtest-webdriver
    , text
    , wai-app-static
    , warp
    , webdriver
